--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "pg": "^8.7.1"
   }
 }
